Fixed a small alignment issue with the menu icon.

--- a/src/client/app/flogo.apps.flows/components/flows.component.less
+++ b/src/client/app/flogo.apps.flows/components/flows.component.less
@@ -56,8 +56,8 @@
 
 .flogo-flow-menu {
   position: absolute;
-  top: 16px;
-  right: 18px;
+  top: 30px;
+  right: 30px;
 
   &:hover {
     .flogo-flow-menu__btn {
